[package]
name = "request_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sqlite = "0.3.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.40.0", features = ["macros"] }
